--- a/UnaPaginaCualquiera.html
+++ b/UnaPaginaCualquiera.html
@@ -39,6 +39,7 @@
 <body>
 	<h1>EduSoft</h1>
 	<div id="iDondeEstaraLaTabla" ></div>
+	<div id="iDondeEstaraTEmporalmeneElAutocompletar" ></div>
 	<br/>
 		Dibuja en tu propio pizarron<br/>
 	<br/>
