Autocompletar funciona con flechas y enter

--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
 			<div class="cTitulo_ESt" >Crear objetos</div>
 			<div id="iCrearObjetos_LugarDelCodigoJS_ESt" class="cLugarDelCodigoJS_ESt" >
 				<div id="LienzoDeCreacion__iSombraTextAreaCrearObjetos_LugarDelCodigoJS_ESt" class="cSombraTextAreaCrearObjetos_LugarDelCodigoJS_ESt" ></div>
-				<textarea id="LienzoDeCreacion__iTextAreaCrearObjetos_LugarDelCodigoJS_ESt" class="cTextAreaCrearObjetos_LugarDelCodigoJS_ESt" onkeyup="ManejoDelCodigoCrearObjetos_ESt(); " >
-
-				</textarea>
+				<textarea id="LienzoDeCreacion__iTextAreaCrearObjetos_LugarDelCodigoJS_ESt" class="cTextAreaCrearObjetos_LugarDelCodigoJS_ESt" onkeyup="ManejoDelCodigoCrearObjetos_ESt(); " ></textarea>
 			</div>
 			<div onclick="EjecutarDesdeCeroLienzo_ESt('LienzoDeCreacion'); " style="cursor: pointer; " >
 				ejecutar ->
@@ -53,9 +51,7 @@
 			<div class="cTitulo_ESt" >Animación</div>
 			<div id="iAnimacion_LugarDelCodigoJS_ESt" class="cLugarDelCodigoJS_ESt" >
 				<div id="LienzoDeCreacion__iSombraTextAreaAnimacion_LugarDelCodigoJS_ESt" class="cSombraTextAreaCrearObjetos_LugarDelCodigoJS_ESt" ></div>
-				<textarea id="LienzoDeCreacion__iTextAreaAnimacion_LugarDelCodigoJS_ESt" class="cTextAreaCrearObjetos_LugarDelCodigoJS_ESt" onkeyup="ManejoDelCodigoAnimacion_ESt();" >
-
-				</textarea>
+				<textarea id="LienzoDeCreacion__iTextAreaAnimacion_LugarDelCodigoJS_ESt" class="cTextAreaCrearObjetos_LugarDelCodigoJS_ESt" onkeyup="ManejoDelCodigoAnimacion_ESt();" ></textarea>
 			</div>
 			<div onclick="EjecutarDesdeCeroLienzo_ESt('LienzoDeCreacion'); EjecutarAnimacionLienzo_ESt('LienzoDeCreacion'); " style="cursor: pointer; " >
 				ejecutar ->
@@ -65,6 +61,7 @@
 			<div id="iAlFinalizar_LugarDelCodigoJS_ESt" class="cLugarDelCodigoJS_ESt" >
 				<div id="iSombraTextAreaAlFinalizar_LugarDelCodigoJS_ESt" class="cSombraTextAreaCrearObjetos_LugarDelCodigoJS_ESt" ></div>
 				<div id="iTextAreaAlFinalizar_LugarDelCodigoJS_ESt" class="cTextAreaCrearObjetos_LugarDelCodigoJS_ESt" contenteditable="true" ></div>
+				
 			</div>
 		</td>
 		<td>
