--- a/UnaPaginaCualquiera.html
+++ b/UnaPaginaCualquiera.html
@@ -50,7 +50,7 @@
 		Anima la pelota, y llevala a donde tu consideras<br/>
 	<br/>
 	<div id="JUsERytD__iLugarDelCanvas_ESt" >
-		<textarea id="JUsERytD__iTextAreaCrearObjetos_LugarDelCodigoJS_ESt" class="cTextAreaCrearObjetos_LugarDelCodigoJS_ESt" onkeyup="ManejoDelCodigoCrearObjetos_ESt(); " invisible>
+		<textarea id="JUsERytD__iTextAreaCrearObjetos_LugarDelCodigoJS_ESt" class="cTextAreaCrearObjetos_LugarDelCodigoJS_ESt" invisible>
 o('swish').setQueEs('swish');
 o('swish').setQueTipo('swishBasico01');
 o('swish').setPosicion(20,20);
@@ -112,7 +112,7 @@ o('input3').setValor('');
 o('input3').setPropiedad('filtro');
 *********************************/
 		</textarea>
-		<textarea id="JUsERytD__iTextAreaAnimacion_LugarDelCodigoJS_ESt" class="cTextAreaCrearObjetos_LugarDelCodigoJS_ESt" onkeyup="ManejoDelCodigoAnimacion_ESt();" invisible>
+		<textarea id="JUsERytD__iTextAreaAnimacion_LugarDelCodigoJS_ESt" class="cTextAreaCrearObjetos_LugarDelCodigoJS_ESt" invisible>
 if(o('swish').getValor()!=0)
 {
 o('pedro').setMoverEnX(-1*soloNumeros(o('input').getValor()));
@@ -126,7 +126,7 @@ o('inputEnY2').setValor(o('pedro').myPosicionEnY);
 		No mas ejercicios clasicos...<br/>
 	<br/>
 	<div id="SDjnerbI__iLugarDelCanvas_ESt" >
-		<textarea id="SDjnerbI__iTextAreaCrearObjetos_LugarDelCodigoJS_ESt" class="cTextAreaCrearObjetos_LugarDelCodigoJS_ESt" onkeyup="ManejoDelCodigoCrearObjetos_ESt(); " invisible>
+		<textarea id="SDjnerbI__iTextAreaCrearObjetos_LugarDelCodigoJS_ESt" class="cTextAreaCrearObjetos_LugarDelCodigoJS_ESt" invisible>
 var ultimoObjeto=o('Cliente');
 ultimoObjeto.formaRectangulo(340,40,140,140);
 ultimoObjeto.setImagenFondo('images/ClaseDeClienteServidor.png');
@@ -173,7 +173,7 @@ o('resultado').setValor('¿Donde va cada objeto de la izquierda?');
 o('resultado').setPosicion(100,0);
 o('resultado').setPropiedad('readonly');
 		</textarea>
-		<textarea id="SDjnerbI__iTextAreaAnimacion_LugarDelCodigoJS_ESt" class="cTextAreaCrearObjetos_LugarDelCodigoJS_ESt" onkeyup="ManejoDelCodigoAnimacion_ESt();" invisible>
+		<textarea id="SDjnerbI__iTextAreaAnimacion_LugarDelCodigoJS_ESt" class="cTextAreaCrearObjetos_LugarDelCodigoJS_ESt" invisible>
 if(
 (o('Servidor').bnObjetoEnEste(o('PHP')))
 &&
@@ -192,7 +192,7 @@ else
 		Prueba los filtros basicos, y las operaciones<br/>
 	<br/>
 	<div id="SJhiotRT__iLugarDelCanvas_ESt" >
-		<textarea id="SJhiotRT__iTextAreaCrearObjetos_LugarDelCodigoJS_ESt" class="cTextAreaCrearObjetos_LugarDelCodigoJS_ESt" onkeyup="ManejoDelCodigoCrearObjetos_ESt(); " invisible>
+		<textarea id="SJhiotRT__iTextAreaCrearObjetos_LugarDelCodigoJS_ESt" class="cTextAreaCrearObjetos_LugarDelCodigoJS_ESt" invisible>
 o('mensajeIngreseValores').setQueEs('input');
 o('mensajeIngreseValores').setPosicion(20,20+100);
 o('mensajeIngreseValores').setAncho(425);
@@ -251,7 +251,7 @@ o('input3').setAncho(425);
 o('input3').setValor('');
 o('input3').setPropiedad('filtro');
 		</textarea>
-		<textarea id="SJhiotRT__iTextAreaAnimacion_LugarDelCodigoJS_ESt" class="cTextAreaCrearObjetos_LugarDelCodigoJS_ESt" onkeyup="ManejoDelCodigoAnimacion_ESt();" invisible>
+		<textarea id="SJhiotRT__iTextAreaAnimacion_LugarDelCodigoJS_ESt" class="cTextAreaCrearObjetos_LugarDelCodigoJS_ESt" invisible>
 			o('numeroC').setValor(soloNumeros(o('numeroA').getValor())+soloNumeros(o('numeroB').getValor()));
 		</textarea>
 	</div>
