actualizacion 01 basado en documento

--- a/UnaPaginaCualquiera.html
+++ b/UnaPaginaCualquiera.html
@@ -1,7 +1,7 @@
-<!DOCTYPE HTML>
+ï»¿<!DOCTYPE HTML>
 <html lang="es">
 <head>
-	<meta charset="ISO-8859-1">
+	<meta charset="UTF-8">
 	<title>EduSoft</title>
 	
 	<!--Mis funciones-->
@@ -88,13 +88,13 @@ o('inputEnY2').setPropiedad('readonly');
 o('inputTx2').setQueEs('input');
 o('inputTx2').setPosicion(90,200);
 o('inputTx2').setAncho(110);
-o('inputTx2').setValor('Posición en X: ');
+o('inputTx2').setValor('PosiciÃ³n en X: ');
 o('inputTx2').setPropiedad('readonly');
 
 o('inputEnYTx2').setQueEs('input');
 o('inputEnYTx2').setPosicion(90,230);
 o('inputEnYTx2').setAncho(110);
-o('inputEnYTx2').setValor('Posición en Y: ');
+o('inputEnYTx2').setValor('PosiciÃ³n en Y: ');
 o('inputEnYTx2').setPropiedad('readonly');
 
 /*********************************
@@ -169,7 +169,7 @@ ultimoObjeto.setPosicionImagenEnY(210);
 
 o('resultado').setQueEs('input');
 o('resultado').setAncho(300);
-o('resultado').setValor('¿Donde va cada objeto de la izquierda?');
+o('resultado').setValor('Â¿Donde va cada objeto de la izquierda?');
 o('resultado').setPosicion(100,0);
 o('resultado').setPropiedad('readonly');
 		</textarea>
@@ -183,9 +183,9 @@ if(
 &&
 (o('Cliente').bnObjetoEnEste(o('JavaScript')))
 )
-{ o('resultado').setValor('¡Ganaste!'); }
+{ o('resultado').setValor('Â¡Ganaste!'); }
 else
-{ o('resultado').setValor('¿Donde va cada objeto de la izquierda?'); }
+{ o('resultado').setValor('Â¿Donde va cada objeto de la izquierda?'); }
 		</textarea>
 	</div>
 	<br/>
