--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	<!--Locales-->
 	<link rel="stylesheet" href="css/css.css" />
 	<script src="js/js.js" charset="ISO-8859-1" ></script>
+	<script src="js/EntornoDeDesarrollo_ESt.js" charset="ISO-8859-1" ></script>
 	
 	<!--prettify-->
 	<!--	<link rel="stylesheet" href="../css/prettify/prettify.css" /> -->
