--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 		onLoad_ESt(_IniciarVariablesDeLugarDelCodigo_ESt);
 	</script>
 	<!--Locales-->
-	<link rel="stylesheet" href="css/css.css" />
-	<script src="js/js.js" charset="ISO-8859-1" ></script>
-	<script src="js/EntornoDeDesarrollo_ESt.js" charset="ISO-8859-1" ></script>
+	<link rel="stylesheet" href="css/EducacionInteractiva.css" />
+	<script src="js/EducacionInteractiva.js" charset="ISO-8859-1" ></script>
+	<script src="js/EducacionInteractiva_EntornoDesarrollo_EI.js" charset="ISO-8859-1" ></script>
 	
 	<!--prettify-->
 	<!--	<link rel="stylesheet" href="../css/prettify/prettify.css" /> -->
