--- a/UnaPaginaCualquiera.html
+++ b/UnaPaginaCualquiera.html
@@ -27,10 +27,10 @@
 		onLoad_MyR(CargarLinezos);
 	</script>
 	<!--Temporal donde estara el codigo para crear tablas e inputs-->
-	<script src="js/CrearTabla.js" charset="ISO-8859-1" ></script>
+	<script src="js/EducacionInteractiva_Tablas_EI.js" charset="ISO-8859-1" ></script>
 	<!--Locales-->
-	<link rel="stylesheet" href="css/css.css" />
-	<script src="js/js.js" charset="ISO-8859-1" ></script>
+	<link rel="stylesheet" href="css/EducacionInteractiva.css" />
+	<script src="js/EducacionInteractiva.js" charset="ISO-8859-1" ></script>
 	
 	<!--prettify-->
 	<!--	<link rel="stylesheet" href="../css/prettify/prettify.css" /> -->
