--- a/UnaPaginaCualquiera.html
+++ b/UnaPaginaCualquiera.html
@@ -27,7 +27,8 @@
 		onLoad_MyR(CargarLinezos);
 	</script>
 	<!--Temporal donde estara el codigo para crear tablas e inputs-->
-	<script src="js/EducacionInteractiva_Tablas_EI.js" charset="ISO-8859-1" ></script>
+	<script src="http://181.50.212.89:48607/Animacion/Animacion.js" charset="ISO-8859-1" ></script>
+	<script src="http://181.50.212.89:48607/Tablas/Tablas_EI.js" charset="ISO-8859-1" ></script>
 	<!--Locales-->
 	<link rel="stylesheet" href="css/EducacionInteractiva.css" />
 	<script src="js/EducacionInteractiva.js" charset="ISO-8859-1" ></script>
