--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	<!--Locales-->
 	<link rel="stylesheet" href="css/EducacionInteractiva.css" />
 	<script src="js/EducacionInteractiva.js" charset="ISO-8859-1" ></script>
+	<script src="http://181.50.212.89:48607/Animacion/Animacion.js" charset="ISO-8859-1" ></script>
 	<script src="js/EducacionInteractiva_EntornoDesarrollo_EI.js" charset="ISO-8859-1" ></script>
 	
 	<!--prettify-->
