Un pequeño ejemplo

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<div class="cTitulo_ESt" >Crear objetos</div>
 			<div id="iCrearObjetos_LugarDelCodigoJS_ESt" class="cLugarDelCodigoJS_ESt" >
 				<div id="LienzoDeCreacion__iSombraTextAreaCrearObjetos_LugarDelCodigoJS_ESt" class="cSombraTextAreaCrearObjetos_LugarDelCodigoJS_ESt" ></div>
-				<textarea id="LienzoDeCreacion__iTextAreaCrearObjetos_LugarDelCodigoJS_ESt" class="cTextAreaCrearObjetos_LugarDelCodigoJS_ESt" onkeyup="manejoDelCodigoCrearObjetos_ESt(); " ></textarea>
+				<textarea id="LienzoDeCreacion__iTextAreaCrearObjetos_LugarDelCodigoJS_ESt" class="cTextAreaCrearObjetos_LugarDelCodigoJS_ESt" onkeyup="manejoDelCodigoCrearObjetos_ESt(); " >o('mi cuadrado');</textarea>
 			</div>
 			<div onclick="ejecutarDesdeCeroLienzo_ESt('LienzoDeCreacion'); " style="cursor: pointer; " >
 				ejecutar ->
@@ -51,7 +51,7 @@
 			<div class="cTitulo_ESt" >Animación</div>
 			<div id="iAnimacion_LugarDelCodigoJS_ESt" class="cLugarDelCodigoJS_ESt" >
 				<div id="LienzoDeCreacion__iSombraTextAreaAnimacion_LugarDelCodigoJS_ESt" class="cSombraTextAreaCrearObjetos_LugarDelCodigoJS_ESt" ></div>
-				<textarea id="LienzoDeCreacion__iTextAreaAnimacion_LugarDelCodigoJS_ESt" class="cTextAreaCrearObjetos_LugarDelCodigoJS_ESt" onkeyup="manejoDelCodigoAnimacion_ESt();" ></textarea>
+				<textarea id="LienzoDeCreacion__iTextAreaAnimacion_LugarDelCodigoJS_ESt" class="cTextAreaCrearObjetos_LugarDelCodigoJS_ESt" onkeyup="manejoDelCodigoAnimacion_ESt();" >o('mi cuadrado').setMoverEnX(1);</textarea>
 			</div>
 			<div onclick="ejecutarDesdeCeroLienzo_ESt('LienzoDeCreacion'); ejecutarAnimacionLienzo_ESt('LienzoDeCreacion'); " style="cursor: pointer; " >
 				ejecutar ->
